--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "request": "^2.88.0",
     "superagent": "^5.1.3"
   },
   "scripts": {
